# agent-marketplace

./: .gitignore  CLAUDE.md  LICENSE  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
claude/: install_to_claude.sh
claude/skills/gitlab-dev/: manifest.yaml  skill.md
claude/skills/huayi-dev/: huayi-dev.md
claude/skills/playwright-cli/: skill.md
codex/: install_to_codex.sh
codex/skills/database-access/: skill.md
codex/skills/exam-generator/: manifest.yaml  skill.md
codex/skills/gitlab-dev/: skill.md
codex/skills/go-spec-review/: skill.md
codex/skills/tabulate/: SKILL.md
copilot/: install_to_copilot.sh
copilot/skills/database-access/: skill.md
copilot/skills/exam-generator/: skill.md
copilot/skills/gitlab-dev/: skill.md
copilot/skills/go-spec-review/: skill.md
copilot/skills/huayi-dev/: README.md  skill.md
copilot/skills/playwright-cli/: skill.md
database-access-mcp/: README.md  pyproject.toml
database-access-mcp/src/database_access_mcp/: __init__.py  __main__.py  config.py  server.py  sql_security.py
database-access-mcp/tests/: __init__.py
doc/: skills-installation.md
huayi-dev-mcp/: README.md  pyproject.toml
huayi-dev-mcp/src/huayi_dev_mcp/: __init__.py  __main__.py  config.py  db_helper.py  server.py
huayi-dev-mcp/tests/: __init__.py
plugins/database-access/: .copilot.yaml
plugins/exam-generator/: .copilot.yaml
plugins/gitlab-dev/: .copilot.yaml  SKILL.md  plugin.json
plugins/gitwork/: plugin.json
plugins/go-spec-review/: .copilot.yaml
plugins/huayi-dev/: .copilot.yaml
plugins/mimo/: SKILL.md  plugin.json
plugins/playwright-cli/: .copilot.yaml  SKILL.md  plugin.json
plugins/remora/: DESIGN.md  plugin.json
scripts/: README.md  sync-skills.py
(+122 files in other folders)
