[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "database-access-mcp"
version = "0.1.0"
description = "MCP server providing secure read-only MySQL database access for AI coding assistants"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Chen Zhongrun", email = "run365@aliyun.com" },
]
keywords = ["mcp", "mysql", "database", "ai", "claude", "copilot", "codex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "pymysql>=1.0.0",
]

[project.urls]
Homepage = ""
Repository = ""
Issues = ""

[project.scripts]
database-access-mcp = "database_access_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/database_access_mcp"]
