[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "huayi-dev-mcp"
version = "0.1.0"
description = "MCP server for Huayi database development assistant"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "pymysql>=1.0.0",
]

[project.scripts]
huayi-dev-mcp = "huayi_dev_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/huayi_dev_mcp"]
